--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,96 @@
 /GNUmakefile
-/build/
-/.cache/
-/.vscode/
+/.cache
+/.vscode
+/build
+/.doctrees
+/config-devices.*
+/config-all-devices.*
+/config-all-disas.*
+/config-host.*
+/config-target.*
+/config.status
+/config-temp
+/tools/virtiofsd/50-qemu-virtiofsd.json
+/elf2dmp
+/trace-events-all
+/trace/generated-events.h
+/trace/generated-events.c
+/trace/generated-helpers-wrappers.h
+/trace/generated-helpers.h
+/trace/generated-helpers.c
+/trace/generated-tcg-tracers.h
+/ui/shader/texture-blit-frag.h
+/ui/shader/texture-blit-vert.h
+/ui/shader/texture-blit-flip-vert.h
+/ui/input-keymap-*.c
+*-timestamp
+/*-softmmu
+/*-darwin-user
+/*-linux-user
+/*-bsd-user
+/ivshmem-client
+/ivshmem-server
+/libdis*
+/libuser
+/linux-headers/asm
+/qga/qapi-generated
+/qapi-gen-timestamp
+/qapi/qapi-builtin-types.[ch]
+/qapi/qapi-builtin-visit.[ch]
+/qapi/qapi-commands-*.[ch]
+/qapi/qapi-commands.[ch]
+/qapi/qapi-emit-events.[ch]
+/qapi/qapi-events-*.[ch]
+/qapi/qapi-events.[ch]
+/qapi/qapi-init-commands.[ch]
+/qapi/qapi-introspect.[ch]
+/qapi/qapi-types-*.[ch]
+/qapi/qapi-types.[ch]
+/qapi/qapi-visit-*.[ch]
+!/qapi/qapi-visit-core.c
+/qapi/qapi-visit.[ch]
+/qapi/qapi-doc.texi
+/qemu-edid
+/qemu-img
+/qemu-nbd
+/qemu-options.def
+/qemu-options.texi
+/qemu-img-cmds.texi
+/qemu-img-cmds.h
+/qemu-io
+/qemu-ga
+/qemu-bridge-helper
+/qemu-keymap
+/qemu-monitor.texi
+/qemu-monitor-info.texi
+/qemu-version.h
+/qemu-version.h.tmp
+/module_block.h
+/scsi/qemu-pr-helper
+/vhost-user-scsi
+/vhost-user-blk
+/vhost-user-gpu
+/vhost-user-input
+/fsdev/virtfs-proxy-helper
+*.tmp
+*.[1-9]
+*.a
+*.aux
+*.cp
+*.exe
+*.msi
+*.dll
+*.so
+*.mo
+*.fn
+*.ky
+*.log
+*.pdf
+*.pod
+*.cps
+*.fns
+*.kys
+*.pg
 *.pyc
 .sdk
 .stgit-*
