--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -1,4 +1,4 @@
 arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'iobc-board.c',
   'iobc-reserved_memory.c',
-  'iobc-pmc.c'))
+  'at91-pmc.c'))
