--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -2,4 +2,5 @@ arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'iobc-board.c',
   'iobc-reserved_memory.c',
   'at91-pmc.c',
+  'at91-aic.c',
   'at91-dbgu.c'))
