arm/isis-obc: Implement or-stub for AIC
The Advanced Interrupt controller or-s all system controller (SYSC)
interrupts at pin 1. Implement a stub-device which does this.

--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -3,4 +3,5 @@ arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'iobc-reserved_memory.c',
   'at91-pmc.c',
   'at91-aic.c',
+  'at91-aic_stub.c',
   'at91-dbgu.c'))
