--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -4,4 +4,5 @@ arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'at91-pmc.c',
   'at91-aic.c',
   'at91-aic_stub.c',
+  'at91-pit.c',
   'at91-dbgu.c'))
