arm/isis-obc: Implement bootmem bus-matrix support
Implement minimal bus-matrix support, to enable re-mapping of the
boot-memory at runtime.

Other features of the bus-matrix are currently not supported.

--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -5,4 +5,5 @@ arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'at91-aic.c',
   'at91-aic_stub.c',
   'at91-pit.c',
+  'at91-matrix.c',
   'at91-dbgu.c'))
