arm/isis-obc: Implement peripheral IO controller

--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -7,4 +7,5 @@ arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'at91-pit.c',
   'at91-rstc.c',
   'at91-matrix.c',
-  'at91-dbgu.c'))
+  'at91-dbgu.c',
+  'at91-pio.c'))
