--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -8,4 +8,5 @@ arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'at91-rstc.c',
   'at91-matrix.c',
   'at91-dbgu.c',
-  'at91-pio.c'))
+  'at91-pio.c',
+  'gpio-led.c'))
