arm/isis-obc: Implement generic server for testing/validation

--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -1,6 +1,7 @@
 arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'iobc-board.c',
   'iobc-reserved_memory.c',
+  'ioxfer-server.c',
   'at91-pmc.c',
   'at91-aic.c',
   'at91-aic_stub.c',
