--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -5,6 +5,7 @@ arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'at91-pmc.c',
   'at91-aic.c',
   'at91-aic_stub.c',
+  'at91-rtt.c',
   'at91-pit.c',
   'at91-rstc.c',
   'at91-matrix.c',
