--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -12,6 +12,7 @@ arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'at91-dbgu.c',
   'at91-usart.c',
   'at91-twi.c',
+  'at91-spi.c',
   'at91-pio.c',
   'gpio-led.c' ,
   'gpio-pushbutton.c'))
