--- a/hw/arm/isis_obc/meson.build
+++ b/hw/arm/isis_obc/meson.build
@@ -15,5 +15,6 @@ arm_ss.add(when: 'CONFIG_ISIS_OBC', if_true: files(
   'at91-spi.c',
   'at91-pio.c',
   'at91-sdramc.c',
+  'at91-mci.c',
   'gpio-led.c' ,
   'gpio-pushbutton.c'))
